<resources>
    <string name="app_name">ITC</string>

    <string name="full_name">Full name</string>
    <string name="user_age">Age</string>
    <string name="generate_qr_code">Generate Qr Code</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="barcode_reader">QrCode Reader</string>
    <string name="app_needs_your_camera_permission_in_order_to_scan_qr_code">App needs your camera permission in order to scan qr code.</string>
    <string name="scanned_qr_code_result">Scanned Qr Code result</string>
    <string name="first_name">Fullname :</string>
    <string name="age">Age :</string>
    <string name="image">Image</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="department">Department</string>
    <string name="register">Register</string>


    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personalize">Personalize</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="pref_name">com.ivapps.itc_preferences</string>
    <string name="my_qr">My Qr</string>
    <string name="scan_qr">Scan Qr</string>
    <string name="email">Email</string>
    <string name="change_ip_in_settings">Change IP in settings</string>
    <string name="retry">Retry</string>
    <string name="failed_to_connect">Failed To Connect</string>
    <string name="loading">Loading…</string>
    <string name="connecting">connecting…</string>
    <string name="network_error">Network Error…</string>
    <string name="checking_response">Checking Response…</string>
    <string name="response_successful">Response Successful!</string>
    <string name="logging_in">Logging In…</string>
    <string name="no_user_found_going_to_register">No User Found, Going to Register…</string>
    <string name="response_unsuccessful">Response Unsuccessful!</string>
    <string name="log_in">Log In</string>
    <string name="projects">Projects</string>
    <string name="qr_dcanner">QR Scanner</string>
    <string name="more">More</string>
    <string name="recent_projects">Recent Projects</string>
</resources>
