<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_root"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:src="@drawable/itc_icon"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/image" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/full_name"
            android:id="@+id/reg_name"
            android:importantForAutofill="yes"
            android:layout_marginBottom="16dp"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/department"
            android:id="@+id/reg_dept"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            tools:ignore="Autofill" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/email_optional"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"
            android:id="@+id/reg_email"
            tools:ignore="Autofill" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/phone_number"
            android:importantForAutofill="yes"
            android:inputType="phone"
            android:layout_marginBottom="16dp"
            android:id="@+id/reg_phone"
            tools:ignore="Autofill" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textColor="@color/white"
            android:id="@+id/register_btn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:id="@+id/goto_login_btn"/>

    </LinearLayout>

</RelativeLayout>