<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/dash_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/dash_dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/dash_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/dash_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</RelativeLayout>