<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:id="@+id/scanned_root"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/scanned_toolbar"
        android:layout_width="match_parent"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/Base.Widget.AppCompat.PopupMenu."
        android:layout_height="?actionBarSize"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@color/white"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/s_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/s_dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/s_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/s_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/addcontact_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="Add To Contacts"
            android:padding="16dp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>



</RelativeLayout>